# claude-sieve

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
claude_sieve/: __main__.py  ast_parser.py  bench.py  cache.py  compressors.py  config.py  junit_parser.py  main.py  mcp_server.py  treesitter_parser.py
claude_sieve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_compressors.py  test_config.py  test_junit_parser.py  test_main.py  test_mcp.py
