[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sieve"
version = "3.0.0"
description = "AST-aware test output compressor for LLM agents — mitigates token inflation and context-window degradation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Claude-Sieve Contributors"}]
keywords = ["test", "llm", "compression", "token", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/darkavenger756/claude-sieve"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
treesitter = [
    "tree-sitter>=0.22",
]

[project.scripts]
clavesieve = "claude_sieve.main:main"
claude-sieve = "claude_sieve.main:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
claude_sieve = ["py.typed"]
